# Soton_P20

./: .gitignore  CMakeLists.txt  Canvas.cpp  Canvas.h  DrawingCommand.cpp  DrawingCommand.h  LICENSE  Physical.cpp  Physical.h  README.md  ReceiveCanvas.cpp  ReceiveCanvas.h  ReceivedThread.cpp  ReceivedThread.h  Receiver.cpp  Receiver.h  SafeQueue.cpp  SafeQueue.h  SendThread.cpp  SendThread.h  Sender.cpp  Sender.h  SharedBoolVar.cpp  SharedBoolVar.h  SharedVariables.cpp  SharedVariables.h  canvas.cpp  canvas.h  colors.cpp  colors.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  physical.cpp  physical.h  threads.cpp  threads.h
.run/: P20_Code.run.xml
